# Blur-AutoClicker-MacOS

./: .gitignore  LICENSE  README.md  overlay.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
src/: App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accessibility.rs  app_state.rs  hotkeys.rs  lib.rs  telemetry.rs  ui_commands.rs
src-tauri/src/engine/: failsafe.rs  mod.rs  mouse.rs  rng.rs  stats.rs  worker.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/updates/: update_checker.rs
src/components/: AccessibilityWarning.tsx  TitleBar.css  TitleBar.tsx  Updatebanner.tsx
src/components/panels/: AdvancedPanelLayout.tsx  SettingsPanel.css  SettingsPanel.tsx  SimplePanel.tsx
