[package]
name = "blur-autoclicker"
version = "3.2.2"
description = "BlurAutoClicker - An accuracy and performance focused auto clicker"
authors = ["Blur009"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-shell = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
log = "0.4"
raw-window-handle = "0.6.2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dirs = "6.0.0"
rand = { version = "0.8", features = ["small_rng"] }
lazy_static = "1.4"
cocoa = "0.26"
core-graphics = "0.24"
